--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@ server.port=8088
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 server.error.include-stacktrace=never
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
